[package]
name = "yaircc"
version = "0.1.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
description = "Yet Another low level IRC Client library"

documentation = "https://docs.rs/yaircc/"
homepage = "https://github.com/pbzweihander/yaircc"
repository = "https://github.com/pbzweihander/yaircc"

keywords = ["irc", "client"]
readme = "README.md"
license = "MIT/Apache-2.0"

edition = "2018"
build = "build.rs"

[dependencies]
encoding = "0.2.33"
futures = "0.3.1"
memchr = "2.2.1"

[dev-dependencies]
failure = "0.1.6"
async-std = "0.99.12"

[badges]
circle-ci = { repository = "pbzweihander/yaircc", branch = "master" }
